Added CNN description

--- a/report_latex/w266 report.tex
+++ b/report_latex/w266 report.tex
@@ -100,7 +100,7 @@ In attempt to increase predictive power of the model we hypothesized that incorp
 
 \textbf{LSTM for abstract representation} The intuition behind using LSTM comes from observation that reviewer reads the words one after another to produce their opinion on weather to recommend the paper for publication or not. Just like an LSTM model, the reviewer reads words in sequence and updates the memory of what they read with every word. In the end the final representation of what they read becomes the basis for accept/reject decision. Mimicking this process we built an two-layer LSTM model with 768 nodes (to match BERT embedding) and trained it on the full output of sciBERT (400 tokens). Surprisingly, the correlation between predicted and observed JIFs was only r = 0.57 (\href{https://github.com/ArtemChemist/w266_project/blob/main/Notebooks/sciBERT%20w%20meta%20to%20LSTM.ipynb}{notebook}), substantially lower than the model that used \textit{cls} and demonstrated r = 0.67.
 
-\textbf{CNN for abstract representation} XXXXXXXXXX
+\textbf{CNN for abstract representation} There is also a possibility that the entire abstract perceived by reviewer as a whole, and the it is the interactions between the words and their meanings that produce the final judgment. From that perspective, using convolutional network to produce the final representation of the abstract appears to be a viable approach. We attempted CNN approach using all tokens produced by BERT, combined with three convolutional layers, each followed by batch normalization and maxpooling. The final convolution was flattened and concatenated with the embeddings for categorical features and the vector of numeric features before passing it to a hidden layer and a regression layer. This architecture was not successful, yielding unsatisfying r = 0.47.    
 
 \textbf{Addition of the title} In attempt to enrich the data set and reduce over fitting we added paper title to the abstract. Two approaches were investigated: generation of a septate \textit{cls}  token and concatenation of title and abstract. Our initial intuition was that title of a paper is meant to be information dense and should be represented in the final regression approximately equal to the full abstract. Therefore we generated two separate \textit{cls} tokens and concatenated them together with the embeddings for the categorical features and a vector of numerical features (\href{https://github.com/ArtemChemist/w266_project/blob/main/Notebooks/sciBERT%20%2B%20sciBERT%20%2B%20small%20meta.ipynb}{notebook}). Contrary to our expectations, this approach resulted in reduced performance (r = 0.62). A more straightforward and less computationally expensive approach is to concatenate title to the abstract and generate one \textit{cls} (\href{https://github.com/ArtemChemist/w266_project/blob/main/Notebooks/sciBERT%20w%20tit%2Babs.ipynb}{notebook}). This method resulted in small, but significant performance improvement (r = 0.69) and also reduced over-fitting.
 
