Reference for the hypothesis testing models

--- a/report_latex/w266 report.tex
+++ b/report_latex/w266 report.tex
@@ -50,9 +50,9 @@ An impact score of the academic paper is a metric critically important for a sci
 \end{abstract}
 
 \section{Introduction}
-The ability to predict the paper's significance could help researchers adjust their presentation strategy. Being able to predict the maximum imact a particular paper can achieve, would allow researchers to publish in the most impactful journal while avoiding delay caused by rejection from a journal with standards that the paper does not meet. Our team aims to elucidate the factors that drive acceptance in high-impact journals.
+The ability to predict the paper's significance could help researchers adjust their presentation strategy. It would allow researchers to publish in the most impactful journal while avoiding delay caused by rejection from a journal with standards that the paper does not meet. In this paper we elucidate the factors that drive acceptance in high-impact journals and build a model that predicts it.
 
-Our hypothesis is that variation in the impact of an academic paper can be mostly explained by the metadata of the paper: country of origin, number of authors, length of the paper etc. The metrics of impact that is the most amenable for the quantitative analysis is Journal Impact Factor (JIF), which is, roughly, the average number of times papers published in this journal this year are cited in the works of others. The advantage of this metric is that it is less prone to stochastic variation, but as a result it reflects the opinion of the reviewer's more than the intrinsic value of the paper.     
+Our hypothesis is that variation in the impact of an academic paper can be mostly explained by the metadata of the paper: country of origin, number of authors, length of the paper etc. The metric of impact that is the most amenable for the quantitative analysis is Journal Impact Factor (JIF), which is, roughly, the average number of times papers published in this journal this year are cited in the works of others. The advantage of this metric is that it is less prone to stochastic variation, but as a result it reflects the opinion of the reviewer's more than the intrinsic value of the paper.     
 
 We selected Pearson's correlation coefficient between the predicted impact and observed impact as the metric to evaluate and compare models. We will assume that we failed to reject null hypothesis if observed-predicted correlation of the model including text data and metadata is not significantly larger than correlation achieved with the same model lacking text data (Eq.~\ref{eq:hypothesis}).
 \begin{equation}\label{eq:hypothesis}
@@ -125,9 +125,9 @@ To elucidate the role of various factors in making erroneous predictions, we bui
 	\label{fig:best_model_corr}
 \end{figure}
 \section{Conclusions and Next Steps}
-The experiments reported in this paper strongly support rejection of our cynical null hypothesis. More to that, unexpectedly good performance of our best model makes it potentially useful for scientists. With more than 70\% correlation between predicted and observed, this model can give the researcher a good estimate of what journals are potential fit for their paper. Tweaking abstract language and the title, a researcher can maximize the chances of acceptance in a more prestigious journal. 
+The experiments reported in this paper strongly support rejection of our somewhat cynical null hypothesis. More to that, unexpectedly good performance of our best model makes it potentially useful for scientists. With more than 70\% correlation between predicted and observed, this model can give the researcher a good estimate of what journals might accept their paper. Additionally, with small changes to abstract and title, the researcher can maximize the chances of acceptance in a more prestigious journal. 
 
-Access to more diverse dataset would potentially benefit the model performance, but it is highly unlikely that the predictive power can be improved much further: acceptance in a journal is always a reviewer's judgement call, and predicting judgement calls is inherently difficult. As a topic for future research, we would be interested in applying this methodology to predicting the actual citation index of individual papers. Citation index is a measure of individual project value, rather than the average journal performance, and might provide useful guidance to the scientists striving to generate the most impactful research. 
+It is unlikely that the predictive power can be improved much further: acceptance in a journal is always a reviewer's judgement call, and predicting judgement calls is inherently difficult. However, access to a more diverse dataset can potentially reduce model bias. As a topic for future research, we would be interested in applying this methodology to predicting the actual citation index of individual papers. Citation index is a measure of individual project value, rather than the average journal performance, and might provide useful guidance to the scientists striving to generate the most impactful research. 
 
 % Entries for the entire Anthology, followed by custom entries
 \bibliography{custom}
